feat: Enhance threading examples and concurrency control
- Updated ThreadsApp to demonstrate virtual threads with Callable tasks and Future results.
- Revised README for concurrency control to clarify race conditions and safe data handling.
- Improved ConcurrencyControlApp to compare UnsafeCounter with AtomicInteger in a multi-threaded context.
- Expanded web technologies chapter to include JSON handling and practical HTTP client usage.
- Added examples for FFM API, emphasizing its preview status in Java 21.
- Introduced a new chapter on error handling, IDE usage, and debugging techniques.
- Added practical basics chapter covering null handling, file I/O, date/time processing, and logging.
- Implemented unit tests for practical basics functionalities.